@@ -3,6 +3,7 @@ Changes for 3.4.8rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-13401] fixed successful items mass update with invalid update interval (agriscenko)
 ..F....... [ZBX-13342] fixed order by query in frontend Maintenance tab (agriscenko)
 A......... [ZBX-6167] fixed partial updating in maintenance.update (ashubin)
 ...G...... [ZBX-13062] banned using of mutex in threads of metrics collection (MVekslers)
